src/style.css
/* Mobile: < 600 width */
/* Tablet (vertical): >= 600 width */
/* Desktop: >= 1000 width */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

input[type="text"],
input[type="email"],
input[type="mail"],
input[type="url"],
input[type="password"],
textarea,
button {
    appearance: none;
}

header {
    background: url("./assets/pexels-steve-header-bg.jpg") no-repeat;
    background-size: 130%;
}

:root {
    --header-height: 45vh;
    --profile-picture-top-offset: 10vw;
    --profile-picture-width: 80%;
    --section-bottom-margin-common: calc(10px + 2rem);
}

.header-profile-picture-wrapper {
    max-width: 75%;
    position: relative;
    margin: auto;
    margin-bottom: 2rem;
}

.header-profile-name {
    position: absolute;
    bottom: 0;
    left: 0.5rem;
    font-size: 2.5rem;
    color: white;
    font-weight: 600;
}

.header-profile-picture {
    width: 100%;
}

.shadowed-image {
    box-shadow: 3pt 4pt 12pt black;
}

section {
    padding: 0 2em;
    text-align: center;
    margin-bottom: var(--section-bottom-margin-common);
}

section h2 {
    font-size: 38pt;
}

section p {
    text-align: left;
    line-height: 1.5em;
}

section ul {
    list-style: none;
}

#about-me {
    padding: 2em 3em;
    text-align: center;
}

#contact-me-socials-container,
#socials-container {
    margin-top: 1.5rem;
    display: flex;
    gap: 2.5rem;
    justify-content: center;
}

.socials-button {
    display: inline-block;
    width: 2.5rem;
    cursor: pointer;
}

#work-container {
    padding: 2em 0;
    display: grid;
    gap: 2em;
    grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
}

.project-card {
    box-shadow: 1pt 1pt 5pt gray;
}

.project-about-header-icon-link {
    width: 1.5rem;
}

.project-about-header-line {
    display: flex;
    justify-content: space-between;
    font-weight: 600;
    margin: 1rem 0;
}

.project-about-header-links-list {
    display: flex;
    gap: 0.7rem;
}

.project-screenshot {
    font-weight: 400;
    height: 60%;
    font-size: 24pt;
    text-align: left;
    padding: 2em;
    aspect-ratio: 1.25;
    display: flex;
    align-items: center;
}

.project-about-header-line,
.project-about-description {
    padding: 0 1.5em;
}

.project-about-description {
    padding-bottom: 5em;
}

footer {
    display: flex;
    flex-wrap: wrap;
    background-color: darkcyan;
}

#contact-me {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1em;
    color: white;
    margin-bottom: 0;
    gap: 1em;
}

#contact-me-picture {
    width: 100%;
}

@media (width >= 600px) {
    header {
        padding: 8rem 3rem 2rem 3rem;
        background-size: cover;
    }
    .header-profile-picture-wrapper {
        float: left;
        max-width: 100px;
        margin: 2rem 2rem 0.5rem 2rem;
        transform-origin: bottom right;
        transform: scale(2);
    }
    .header-profile-name {
        font-size: 3rem;
        text-shadow: 1pt 1pt 5pt gray;
        text-wrap: nowrap;
        display: block;
        transform: scale(0.5) translate(-3rem, -10rem);
    }
    .shadowed-image {
        box-shadow: 2pt 2pt 15pt -3pt gray;
    }
    section {
        text-align: left;
    }
    section p {
        text-align: justify;
    }
    #about-me {
        background-color: white;
        box-shadow: 2pt 2pt 5pt gray;
        margin-left: 2em;
        margin-right: 2em;
    }
    #contact-me {
        width: 50%;
    }
    #socials-container {
        justify-content: flex-end;
    }
    #contact-me-socials-container {
        justify-content: flex-start;
    }
    #contact-me-picture {
        padding: 1rem;
        width: 50%;
        height: 100%;
    }
}

@media (width >= 900px) {
    #contact-me {
        width: 40%;
        padding: 2.5em;
    }
    #contact-me + picture {
        max-width: 60%;
        height: 70%;
    }
    #socials-container {
        justify-content: flex-end;
    }
    #contact-me-socials-container {
        justify-content: flex-start;
    }
    footer {
        flex-wrap: nowrap;
        justify-content: space-around;
        align-items: center;
    }
    #contact-me-picture {
        width: 100%;
        padding: 2em;
        height: 100%;
        aspect-ratio: 1.5;
    }
}

